internal/fixtures/scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $NAME
spec:
  type: ClusterIP
  ports:
  - port: $SERVICE_PORT
    targetPort: $MAIN_PORT
  selector:
    app: $NAME
